--- a/travelBookingSystem/Form9.resx
+++ b/travelBookingSystem/Form9.resx
@@ -137,7 +137,7 @@
         MkBTDQMBrH40VVVx/LgqkUgk2k2n8xcn6v/YYMHsFgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="Guna2Button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="logoutBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADwAAAA8CAYAAAA6/NlyAAAABGdBTUEAALGPC/xhBQAAAldJREFUaEPt
         msuKE0EYRiOIF9CFoG4V0YWKjIIg44gICs7KlZeteBvfwLVLV7NQl+ILKILjUygKojsRl4qCV1S8xvNV
